tests/rosetta/out/Rust/abc-problem.error
rustc error: exit status 1
error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenabc-problem3481477413/001/prog.rs:13:40
   |
13 |             let c = &s[i as usize..i + 1 as usize];
   |                                        ^^^^^^^^^^ expected `i32`, found `usize`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldenabc-problem3481477413/001/prog.rs:13:36
   |
13 |             let c = &s[i as usize..i + 1 as usize];
   |                                    ^^^^^^^^^^^^^^ expected `usize`, found `i32`

error[E0277]: cannot add `usize` to `i32`
  --> /tmp/TestMochiRustGoldenabc-problem3481477413/001/prog.rs:13:38
   |
13 |             let c = &s[i as usize..i + 1 as usize];
   |                                      ^ no implementation for `i32 + usize`
   |
   = help: the trait `Add<usize>` is not implemented for `i32`
   = help: the following other types implement trait `Add<Rhs>`:
             `&i32` implements `Add<i32>`
             `&i32` implements `Add`
             `i32` implements `Add<&i32>`
             `i32` implements `Add`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiRustGoldenabc-problem3481477413/001/prog.rs:20:17
   |
20 |                 cur += c;
   |                 ---^^^^^
   |                 |
   |                 cannot use `+=` on type `&str`

error[E0425]: cannot find function `lower` in this scope
  --> /tmp/TestMochiRustGoldenabc-problem3481477413/001/prog.rs:33:17
   |
33 |         let c = lower(&word[0..1]);
   |                 ^^^^^ not found in this scope

error[E0425]: cannot find function `lower` in this scope
  --> /tmp/TestMochiRustGoldenabc-problem3481477413/001/prog.rs:37:21
   |
37 |             if c == lower(&b[0..1]) || c == lower(&b[1..2]) {
   |                     ^^^^^ not found in this scope

error[E0425]: cannot find function `lower` in this scope
  --> /tmp/TestMochiRustGoldenabc-problem3481477413/001/prog.rs:37:45
   |
37 |             if c == lower(&b[0..1]) || c == lower(&b[1..2]) {
   |                                             ^^^^^ not found in this scope

error[E0507]: cannot move out of `bl`, a captured variable in an `Fn` closure
  --> /tmp/TestMochiRustGoldenabc-problem3481477413/001/prog.rs:56:60
   |
55 |         let bl = fields(blocks);
   |             -- captured outer variable
56 |         return Box::new(move |w: &'static str| canSpell(w, bl));
   |                         ----------------------             ^^ move occurs because `bl` has type `Vec<&str>`, which does not implement the `Copy` trait
   |                         |
   |                         captured by this `Fn` closure

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0277, E0308, E0368, E0425, E0507.
For more information about an error, try `rustc --explain E0277`.
